--- a/index.html
+++ b/index.html
@@ -3,57 +3,149 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Jeu Fidélité</title>
+  <title>Jeu Fidélité - Beauté Antigone</title>
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Quicksand', sans-serif;
       text-align: center;
       padding: 50px;
-      background: #f5f5f5;
+      background-color: #ffe6f0;
+      color: #5c2a4a;
+      overflow-x: hidden;
     }
-    h1 { color: #333; }
+
+    img.logo {
+      width: 120px;
+      border-radius: 50%;
+      margin-bottom: 20px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+
+    h1 {
+      font-size: 32px;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 18px;
+      color: #6e3b58;
+    }
+
+    button {
+      background-color: #e91e63;
+      color: white;
+      border: none;
+      border-radius: 30px;
+      padding: 15px 35px;
+      font-size: 18px;
+      cursor: pointer;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      transition: background-color 0.3s ease;
+    }
+
+    button:hover {
+      background-color: #c2185b;
+    }
+
+    button:disabled {
+      background-color: #ccc;
+      cursor: not-allowed;
+    }
+
     #result {
       margin-top: 30px;
       font-size: 24px;
       font-weight: bold;
-      color: #007744;
+      animation: fadeIn 0.8s ease-in-out;
     }
-    button {
-      margin-top: 20px;
-      padding: 15px 30px;
-      font-size: 18px;
-      cursor: pointer;
-      background-color: #0077cc;
-      color: white;
-      border: none;
-      border-radius: 5px;
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
     }
-    button:hover {
-      background-color: #005fa3;
+
+    #bravo {
+      font-size: 60px;
+      font-weight: bold;
+      color: #d81b60;
+      position: absolute;
+      top: 40%;
+      left: 50%;
+      transform: translate(-50%, -50%) scale(0);
+      animation: none;
+      z-index: 10;
+      pointer-events: none;
+    }
+
+    @keyframes zoomInOut {
+      0% { transform: translate(-50%, -50%) scale(0); opacity: 0; }
+      30% { transform: translate(-50%, -50%) scale(1.3); opacity: 1; }
+      60% { transform: translate(-50%, -50%) scale(1); }
+      100% { transform: translate(-50%, -50%) scale(0); opacity: 0; }
     }
   </style>
 </head>
 <body>
 
-  <h1>Bienvenue au Jeu Fidélité !</h1>
-  <p>Clique sur le bouton pour découvrir ton gain :</p>
-  <button onclick="tirageAleatoire()">Jouer</button>
+  <img src="https://via.placeholder.com/120x120.png?text=Logo" alt="Logo Beauté" class="logo">
+
+  <h1>Bienvenue au Jeu Fidélité</h1>
+  <p>Clique ci-dessous pour découvrir ton gain :</p>
+
+  <button id="playBtn" onclick="tirageAleatoire()">Jouer</button>
   <div id="result"></div>
+  <div id="bravo">BRAVO !</div>
 
   <script>
+    function showBravo() {
+      const bravo = document.getElementById("bravo");
+      bravo.style.animation = "zoomInOut 2.5s ease-in-out";
+      setTimeout(() => {
+        bravo.style.animation = "none";
+      }, 2500);
+    }
+
+    function lancerConfettis() {
+      confetti({
+        particleCount: 150,
+        spread: 80,
+        origin: { y: 0.6 },
+        colors: ['#e91e63', '#f8bbd0', '#ffffff']
+      });
+    }
+
     function tirageAleatoire() {
+      if (localStorage.getItem("jeuFideliteDejaJoue")) {
+        document.getElementById("result").innerHTML = "Tu as déjà joué. Reviens nous voir bientôt !";
+        document.getElementById("playBtn").disabled = true;
+        return;
+      }
+
       const alea = Math.random();
       let resultat = "";
 
       if (alea < 0.6) {
-        resultat = "Gratte une case simple";
+        resultat = "Gratte une case simple !";
       } else if (alea < 0.9) {
-        resultat = "Gratte jusqu’à une case gagnante";
+        resultat = "Gratte jusqu’à une case gagnante !";
       } else {
-        resultat = "Gratte une ligne entière";
+        resultat = "Félicitations ! Gratte une ligne entière !";
+        lancerConfettis();
+        showBravo();
       }
 
       document.getElementById("result").innerHTML = resultat;
+      document.getElementById("playBtn").disabled = true;
+      localStorage.setItem("jeuFideliteDejaJoue", true);
+    }
+
+    window.onload = function() {
+      if (localStorage.getItem("jeuFideliteDejaJoue")) {
+        document.getElementById("result").innerHTML = "Tu as déjà joué. Reviens nous voir bientôt !";
+        document.getElementById("playBtn").disabled = true;
+      }
     }
   </script>
 
