--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 </head>
 <body>
 
-  <!-- Logo personnalisé -->
-  <img src="https://oaidalleapiprodscus.blob.core.windows.net/private/org-r7hA1rO7YUNYO8R7dxxdOQSO/user-u9QSm8RPQ6iZw9WEO5PjIHXt/img-KZ1WhgUpAUzAHTdA4Wph1a4h.png?st=2024-04-11T13%3A20%3A00Z&se=2026-04-11T13%3A20%3A00Z&sp=r&sv=2021-08-06&sr=b&sig=VdZBIyJ%2FC9ZLhnPfbkegID8Zgi7brJv%2FqzswzUt%2FJ5k%3D" alt="Logo Beauté Antigone" class="logo">
+  <!-- Logo Beauté Antigone -->
+  <img src="https://i.postimg.cc/MpHG9gpq/logo-beaute-antigone.jpg" alt="Logo Beauté Antigone" class="logo">
 
   <h1>Bienvenue au Jeu Fidélité</h1>
   <p>Clique ci-dessous pour découvrir ton gain :</p>
