--- a/index.html
+++ b/index.html
@@ -4,28 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Jeu Fidélité - Beauté Antigone</title>
-  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <style>
     body {
       font-family: 'Quicksand', sans-serif;
       text-align: center;
-      padding: 50px;
+      padding: 60px 30px;
       background-color: #ffe6f0;
       color: #5c2a4a;
       overflow-x: hidden;
     }
 
-    img.logo {
-      width: 140px;
-      border-radius: 10px;
-      margin-bottom: 20px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-    }
-
-    h1 {
-      font-size: 32px;
+    h1.title {
+      font-size: 42px;
       margin-bottom: 10px;
+      color: #c2185b;
+      letter-spacing: 1px;
     }
 
     p {
@@ -38,10 +33,11 @@
       color: white;
       border: none;
       border-radius: 30px;
-      padding: 15px 35px;
+      padding: 15px 40px;
       font-size: 18px;
       cursor: pointer;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      margin-top: 20px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
       transition: background-color 0.3s ease;
     }
 
@@ -54,97 +50,113 @@
       cursor: not-allowed;
     }
 
+    #loading {
+      font-size: 22px;
+      margin-top: 20px;
+      animation: blink 1s infinite;
+      color: #b30059;
+    }
+
+    @keyframes blink {
+      0%, 100% { opacity: 0.2; }
+      50% { opacity: 1; }
+    }
+
     #result {
-      margin-top: 30px;
-      font-size: 24px;
+      margin-top: 40px;
+      font-size: 26px;
       font-weight: bold;
-      animation: fadeIn 0.8s ease-in-out;
+      opacity: 0;
+      transform: scale(0.8);
+      transition: all 0.4s ease-in-out;
     }
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
+    .show {
+      opacity: 1 !important;
+      transform: scale(1) !important;
     }
 
-    #bravo {
-      font-size: 60px;
-      font-weight: bold;
-      color: #d81b60;
-      position: absolute;
-      top: 40%;
-      left: 50%;
-      transform: translate(-50%, -50%) scale(0);
-      animation: none;
-      z-index: 10;
-      pointer-events: none;
+    .congrats {
+      font-size: 40px;
+      margin-bottom: 20px;
+      color: #e91e63;
+      animation: pop 1s ease-in-out;
     }
 
-    @keyframes zoomInOut {
-      0% { transform: translate(-50%, -50%) scale(0); opacity: 0; }
-      30% { transform: translate(-50%, -50%) scale(1.3); opacity: 1; }
-      60% { transform: translate(-50%, -50%) scale(1); }
-      100% { transform: translate(-50%, -50%) scale(0); opacity: 0; }
+    @keyframes pop {
+      0% { transform: scale(0); opacity: 0; }
+      50% { transform: scale(1.2); opacity: 1; }
+      100% { transform: scale(1); }
     }
   </style>
 </head>
 <body>
 
-  <!-- Logo Beauté Antigone -->
-  <img src="https://i.postimg.cc/MpHG9gpq/logo-beaute-antigone.jpg" alt="Logo Beauté Antigone" class="logo">
+  <h1 class="title">Beauté Antigone</h1>
+  <p>Participe à notre jeu fidélité et découvre ton gain surprise :</p>
 
-  <h1>Bienvenue au Jeu Fidélité</h1>
-  <p>Clique ci-dessous pour découvrir ton gain :</p>
-
-  <button id="playBtn" onclick="tirageAleatoire()">Jouer</button>
+  <button id="playBtn" onclick="jouer()">Jouer</button>
+  <div id="loading"></div>
   <div id="result"></div>
-  <div id="bravo">BRAVO !</div>
 
   <script>
-    function showBravo() {
-      const bravo = document.getElementById("bravo");
-      bravo.style.animation = "zoomInOut 2.5s ease-in-out";
-      setTimeout(() => {
-        bravo.style.animation = "none";
-      }, 2500);
-    }
-
     function lancerConfettis() {
       confetti({
-        particleCount: 150,
+        particleCount: 200,
         spread: 80,
         origin: { y: 0.6 },
-        colors: ['#e91e63', '#f8bbd0', '#ffffff']
+        colors: ['#f06292', '#f8bbd0', '#ffffff']
       });
     }
 
-    function tirageAleatoire() {
+    function afficherGain(texte) {
+      const resultDiv = document.getElementById("result");
+      resultDiv.innerHTML = `<div class="congrats">Félicitations !</div><div>${texte}</div>`;
+      resultDiv.classList.add("show");
+      lancerConfettis();
+    }
+
+    function jouer() {
       if (localStorage.getItem("jeuFideliteDejaJoue")) {
-        document.getElementById("result").innerHTML = "Tu as déjà joué. Reviens nous voir bientôt !";
+        document.getElementById("result").innerHTML = "Tu as déjà joué. Reviens bientôt !";
         document.getElementById("playBtn").disabled = true;
         return;
       }
 
-      const alea = Math.random();
-      let resultat = "";
+      const loading = document.getElementById("loading");
+      const result = document.getElementById("result");
+      const playBtn = document.getElementById("playBtn");
 
-      if (alea < 0.6) {
-        resultat = "Gratte une case simple !";
-      } else if (alea < 0.9) {
-        resultat = "Gratte jusqu’à une case gagnante !";
-      } else {
-        resultat = "Félicitations ! Gratte une ligne entière !";
-        lancerConfettis();
-        showBravo();
-      }
+      // Reset
+      result.innerHTML = "";
+      result.classList.remove("show");
 
-      document.getElementById("result").innerHTML = resultat;
-      document.getElementById("playBtn").disabled = true;
-      localStorage.setItem("jeuFideliteDejaJoue", true);
+      // Afficher chargement
+      loading.innerText = "Chargement de ton gain...";
+      playBtn.disabled = true;
+
+      setTimeout(() => {
+        loading.innerText = "";
+
+        const alea = Math.random();
+        let texte = "";
+
+        if (alea < 0.6) {
+          texte = "Gratte une case simple !";
+        } else if (alea < 0.9) {
+          texte = "Gratte jusqu’à une case gagnante !";
+        } else {
+          texte = "Gratte une ligne entière !";
+        }
+
+        afficherGain(texte);
+        localStorage.setItem("jeuFideliteDejaJoue", true);
+      }, 2500);
     }
 
     window.onload = function() {
       if (localStorage.getItem("jeuFideliteDejaJoue")) {
-        document.getElementById("result").innerHTML = "Tu as déjà joué. Reviens nous voir bientôt !";
+        document.getElementById("result").innerHTML = "Tu as déjà joué. Reviens bientôt !";
         document.getElementById("playBtn").disabled = true;
       }
     }
